fixed shell script